...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.998"
            app:srcCompat="@drawable/bottombarcoloring" />


        <ImageButton
            android:id="@+id/profile_picture_button"
            android:layout_width="51dp"
            android:layout_height="46dp"
            android:backgroundTint="#D7F2EE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.994"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.043"
            app:srcCompat="@drawable/profilepicturebutton" />

        <ImageButton
            android:id="@+id/more_options_button"
            android:layout_width="54dp"
            android:layout_height="28dp"
            android:backgroundTint="#D7F2EE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.976"
                app:srcCompat="@drawable/checkeventsbutton" />

            <ImageButton
                android:id="@+id/check_updates_button"
                android:layout_width="125dp"
                android:layout_height="79dp"
                android:layout_marginTop="812dp"
                android:backgroundTint="#93BDB6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/final_qr_code_button" />

            <LinearLayout
                android:id="@+id/more_options_drawer"
                android:layout_width="141dp"
                android:layout_height="0dp"
                android:background="#90C5BD"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/scan_qr_code_button"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/create_event_button" />

                    <ImageButton
                        android:id="@+id/close_drawer_button"
                        android:layout_width="45dp"
                        android:layout_height="31dp"
                        android:layout_marginStart="99dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/drawer_background_color"
...
